# api-services/routes/users.js
@@ -56,19 +56,6 @@ router.post("/", function(req,res,next){
   })
 })
 
-router.get("/product/:userid", function(req,res, next){
-  var user_id = req.params.userid;
-  Product.getAllUserProduct(user_id, (rows) => {
-    if (!rows) {
-      res.json({
-        "status": "failed",
-        "user": null
-      })
-    } else {
-      res.json({ products: rows });
-    }
-  });
-})
 
 
 module.exports = router;
